--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bits-whisperer"
-version = "1.0.0"
+version = "1.1.0"
 description = "Consumer-grade audio transcription with cloud + on-device Whisper support. Accessibility-first WXPython desktop app."
 readme = "README.md"
 license = "MIT"
@@ -24,6 +24,7 @@ dependencies = [
     "platformdirs>=4.0.0",
     "httpx>=0.25.0",
     "packaging>=23.0",
+    "numpy>=1.24.0",
     "winsdk>=1.0.0b10; sys_platform == 'win32'",
     "comtypes>=1.2.0; sys_platform == 'win32'",
 ]
@@ -41,6 +42,12 @@ gemini = ["google-genai>=0.4.0"]
 groq = ["groq>=0.4.0"]
 rev-ai = ["rev-ai>=2.17.0"]
 speechmatics = ["speechmatics-python>=1.0.0"]
+# Live transcription (microphone capture)
+live = ["sounddevice>=0.4.6", "faster-whisper>=1.0.0"]
+# AI services (translation / summarization)
+ai-openai = ["openai>=1.0.0"]
+ai-anthropic = ["anthropic>=0.30.0"]
+ai-all = ["openai>=1.0.0", "anthropic>=0.30.0"]
 # Provider bundles
 all-providers = [
     "faster-whisper>=1.0.0",
@@ -54,6 +61,8 @@ all-providers = [
     "groq>=0.4.0",
     "rev-ai>=2.17.0",
     "speechmatics-python>=1.0.0",
+    "sounddevice>=0.4.6",
+    "anthropic>=0.30.0",
 ]
 dev = [
     "pytest>=7.0",
