feat: AI model catalog, pricing, Copilot tiers, Gemma models, vocabulary, templates, multi-language translation, streaming - 22 AI models across 4 providers with real-time per-1K-token pricing - Copilot subscription tier gating (Free/Pro/Business/Enterprise) - 5 Google Gemma variants (27B/12B/4B/1B/3n-E4B) in Gemini catalog - Custom vocabulary for domain-specific AI prompts - 10 built-in prompt templates (translation/summarization/analysis) - Multi-language simultaneous translation via AI menu - Streaming support flags for Deepgram and AssemblyAI - AI settings dialog expanded to 5 tabs (Providers/Preferences/Vocabulary/Templates/Multi-Language) - Copilot setup wizard with tier-based model selection and pricing - Version consolidated to 1.0.0 across all files and documentation - 255 tests passing (64 new Phase 4 tests)

--- a/requirements-providers.txt
+++ b/requirements-providers.txt
@@ -13,3 +13,6 @@ google-genai>=0.4.0
 groq>=0.4.0
 rev-ai>=2.17.0
 speechmatics-python>=1.0.0
+anthropic>=0.30.0
+github-copilot-sdk
+sounddevice>=0.4.6
