feat: Phases 5-8, AI actions, slash commands, quality infrastructure
Features:
- Phase 5: TreeView queue panel, folder transcription, cost estimation, chat tab
- Phase 6: Budget limits with per-provider/model caps, cost confirmation dialog,
  wizard budget page (9 pages total)
- Phase 7: Custom job/folder naming, batch retry/clear, queue filtering, F2 rename
- Phase 8: AI Actions post-transcription (6 built-in presets: Meeting Minutes,
  Action Items, Executive Summary, Interview Notes, Lecture Notes, Q&A Extraction)
- Slash commands: 27 commands across AI and App categories with aliases, autocomplete
- Context window manager: model-aware token budgeting, smart transcript fitting
- Audio player dialog: pitch-preserving preview with clip-range selection
- Add File wizard: guided file/folder setup with provider, model, AI action selection
- Document reader: text extraction for context attachments
- GitHub OAuth: device code flow for Copilot authentication
- Registration service: license key validation

Code quality infrastructure:
- Pre-commit hooks: black, ruff, mypy, codespell, markdownlint, pre-commit-hooks
- GitHub Actions CI: lint + security (pip-audit) + test (coverage) + quality gate
- VS Code workspace: settings.json (ruff/black/format-on-save), extensions.json
- EditorConfig, markdownlint config, pyrightconfig.json (basic type checking)
- Ruff expanded to 22 rule categories (added S, T20, PT, A, ERA)
- Removed .flake8 (ruff covers all rules)
- Agent instructions: copilot-instructions.md, CLAUDE.md with verification gates

Fixes:
- 55 ruff violations fixed, all files black-formatted
- CopilotAIProvider runtime bugs (missing cli_path, detect_cli)
- 6 test failures resolved
- Clean shutdown: temp file tracking, atexit cleanup, stale file removal

Tests: 748 passing | Lint: 0 errors | Format: 0 changes

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,19 @@ build/
 *.spec
 
 # --- IDE / Editor ---
-.vscode/
+# Track .vscode/settings.json and .vscode/extensions.json for
+# standardised workspace config (ruff, black, spell checker).
+# Exclude user-specific launch/task configs.
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
 .idea/
 *.swp
 *.swo
 *~
+
+# --- AI agent / assistant ---
+.claude/
 
 # --- Testing & Linting ---
 .pytest_cache/
@@ -39,12 +47,22 @@ htmlcov/
 .DS_Store
 Thumbs.db
 desktop.ini
+nul
 
 # --- Logs ---
 *.log
 
-# --- Build scripts (development only) ---
-run_build.bat
+# --- Temp / scratch files ---
+*.bak
+verify.txt
+test_final.txt
+lint_output*.txt
+pip_output.txt
 test_output.txt
+test_result.txt
+test_results.txt
 build_stderr.log
 build_stdout.log
+
+# --- Build scripts (development only) ---
+run_build.bat
