--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,7 @@ psutil>=5.9.0
 platformdirs>=4.0.0
 httpx>=0.25.0
 packaging>=23.0
+accessible_output2>=0.17
+sounddevice>=0.4.6
 winsdk>=1.0.0b10; sys_platform == "win32"
 comtypes>=1.2.0; sys_platform == "win32"
