fix: resolve Problems pane errors - type safety, SDK imports, config alignment
- Remove conflicting python.analysis.* from .vscode/settings.json (pyrightconfig.json authoritative)
- Fix type errors across UI code (null guards, speaker types, return casts)
- Suppress mypy/pyright conflicts (warn_unused_ignores, reportUnnecessaryTypeIgnoreComment)
- Fix unused variables in test_context_manager.py
- Add TYPE_CHECKING import for CopilotService in main_frame.py
- Set reportMissingImports=none for optional SDK imports
- Remove non-existent schema from feature_flags.json
- Add Problems pane zero-errors as Gate 4 in docs

33 files changed, 783 tests passing, all gates green.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,7 @@
 {
   // ── Python Analysis ─────────────────────────────────────────────────
-  "python.analysis.extraPaths": ["./src"],
-  "python.analysis.stubPath": "./typings",
-  "python.analysis.typeCheckingMode": "basic",
+  // Type checking settings are in pyrightconfig.json (authoritative).
   "python.analysis.autoImportCompletions": true,
-  "python.analysis.diagnosticSeverityOverrides": {
-    "reportMissingImports": "none",
-    "reportMissingTypeStubs": "none",
-    "reportMissingModuleSource": "none",
-    "reportUnknownMemberType": "none",
-    "reportUnknownArgumentType": "none",
-    "reportUnknownParameterType": "none",
-    "reportUnknownVariableType": "none",
-    "reportUnknownLambdaType": "none",
-    "reportArgumentType": "none",
-    "reportCallIssue": "none",
-    "reportIndexIssue": "none",
-    "reportGeneralTypeIssues": "none"
-  },
 
   // ── Formatting ──────────────────────────────────────────────────────
   // Black is the authoritative formatter (via the Black Formatter extension).
