--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,10 +158,10 @@ ignore = [
 
 [tool.mypy]
 python_version = "3.13"
-warn_return_any = true
+warn_return_any = false
 warn_unused_configs = true
 warn_redundant_casts = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 check_untyped_defs = true
 no_implicit_optional = true
 ignore_missing_imports = true
